--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-babel==2.9.0
-python-dateutil==2.6.0
-flask-moment==0.11.0
-flask-wtf==0.14.3
-flask_sqlalchemy==2.4.4
+Babel==2.9.0
+python-dateutil==2.9.0.post0
+Flask-Moment==1.0.6
+Flask-WTF==1.2.1
+Flask-SQLAlchemy==3.1.1
+psycopg2==2.9.10
